--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -370,8 +370,9 @@ $hexagon-index: 0.3;
 .step-container{
     height: 400px;
     min-width: 300px;
+    max-width: 300px;
     cursor: pointer;
-    margin: 10px;
+    margin: 10px auto;
     // border: 1px solid #fff;
     // border-radius: 5px;
     // padding: 10px;
@@ -401,7 +402,7 @@ $hexagon-index: 0.3;
     padding: 5px;
 }
 
-.step-image-category, .step-image-bricktype, .step-image-wall{
+.step-image-category, .step-image-bricktype, .step-image-wall, .step-image-friend{
     margin-top: 40px;
     height: 200px;
     background-position: center;
@@ -415,7 +416,7 @@ $hexagon-index: 0.3;
 
     transition: all 1.2s ease;
 }
-.step-image-category:hover, .step-image-bricktype:hover, .step-image-wall:hover{
+.step-image-category:hover, .step-image-bricktype:hover, .step-image-wall:hover, .step-image-friend:hover{
     transition: 0.4s ease-in;
     transform: translatey(-20px) scale(1.2);
 }
@@ -431,6 +432,12 @@ $hexagon-index: 0.3;
 .step-image-wall{
     background-image: url(../../images/wall.jpg);
 }
+
+.step-image-friend{
+    background-image: url(../../images/friends.jpg);
+}
+
+
 
 @media screen and(max-width: 1510px){
     .category-sample-list .hexagon:nth-child(5){
