FIxes for Primeng

--- a/src/content/primeng-styles.scss
+++ b/src/content/primeng-styles.scss
@@ -4,9 +4,9 @@
     background-color: transparent!important;
 }
 
-.ui-carousel-button, .ui-carousel-page-link{
-    width: 10px;
-    height: 10px;
-    border: 1px solid white;
-    border-radius: 50%;
-}
+// .ui-carousel-button, .ui-carousel-page-link{
+//     width: 10px;
+//     height: 10px;
+//     border: 1px solid white;
+//     border-radius: 50%;
+// }
