--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -69,7 +69,7 @@
     </div>
     
 
-    <section class="section section-dark">
+    <section class="section section-dark carousel-container">
         <h1 class="how-to-work">Как с нами работать?</h1>
 
 
