--- a/src/app/userSetting/brickTypeCards/brick-type-page/brick-type-page.component.html
+++ b/src/app/userSetting/brickTypeCards/brick-type-page/brick-type-page.component.html
@@ -4,130 +4,132 @@
     </div>
 </div>
 
-<mat-card class="brick-details-page">
-    <form [formGroup]="brickTypeDetailsForm">
+<div class="brick-type-page-container">
+    <mat-card class="brick-details-page">
+        <form [formGroup]="brickTypeDetailsForm">
 
-        <mat-form-field>
-            <input matInput required placeholder="{{'Step2.SkillName' | translate}}" formControlName="name">
-            <mat-error>
-                Название обязательно для заполнения
-            </mat-error>
-        </mat-form-field>
+            <mat-form-field>
+                <input matInput required placeholder="{{'Step2.SkillName' | translate}}" formControlName="name">
+                <mat-error>
+                    Название обязательно для заполнения
+                </mat-error>
+            </mat-form-field>
 
-        <mat-form-field>
-            <mat-select placeholder="{{'NameCategory' | translate}}" matInput required formControlName="category">
-                <mat-option *ngFor="let category of categoriesList" [value]="category._id">
-                    <div class="color-list-option">
-                        <div class="small-brick-type brick-in-option" [ngStyle]="{'background-color':category.color}"></div>
-                        <div>{{ category.name }}</div>
-                    </div>
-                </mat-option>
-            </mat-select>
-            <mat-error>
-                Сфера влияния обязательна для заполнения
-            </mat-error>
-        </mat-form-field>
+            <mat-form-field>
+                <mat-select placeholder="{{'NameCategory' | translate}}" matInput required formControlName="category">
+                    <mat-option *ngFor="let category of categoriesList | async" [value]="category._id">
+                        <div class="color-list-option">
+                            <div class="small-brick-type brick-in-option" [ngStyle]="{'background-color':category.color}"></div>
+                            <div>{{ category.name }}</div>
+                        </div>
+                    </mat-option>
+                </mat-select>
+                <mat-error>
+                    Сфера влияния обязательна для заполнения
+                </mat-error>
+            </mat-form-field>
 
-        <mat-form-field>
-            <!-- {{brickTypeDetailsForm.controls.isIcon.value}} -->
-            <mat-icon *ngIf="brickTypeDetailsForm && brickTypeDetailsForm.controls.isIcon.value">
-                {{brickTypeDetailsForm.controls.sign.value}}
-            </mat-icon>
-            <input type="text" placeholder="{{'Step2.SkillSign' | translate}}" class="inputIconControl" formControlName="sign" required
-                matInput [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="getDisplayFn()">
-                <mat-option *ngFor="let icon of frendsIconListResult" [value]="icon">
-                    <mat-icon>{{icon}}</mat-icon>
-                    <span> {{icon}}</span>
-                </mat-option>
-            </mat-autocomplete>
+            <mat-form-field>
+                <!-- {{brickTypeDetailsForm.controls.isIcon.value}} -->
+                <mat-icon *ngIf="brickTypeDetailsForm && brickTypeDetailsForm.controls.isIcon.value">
+                    {{brickTypeDetailsForm.controls.sign.value}}
+                </mat-icon>
+                <input type="text" placeholder="{{'Step2.SkillSign' | translate}}" class="inputIconControl" formControlName="sign" required
+                    matInput [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete" [displayWith]="getDisplayFn()">
+                    <mat-option *ngFor="let icon of frendsIconListResult" [value]="icon">
+                        <mat-icon>{{icon}}</mat-icon>
+                        <span> {{icon}}</span>
+                    </mat-option>
+                </mat-autocomplete>
 
-            <div class="mat-error-custom" *ngIf="brickTypeDetailsForm.controls && 
-                                        brickTypeDetailsForm.controls.sign.value && 
-                                        !brickTypeDetailsForm.controls.isIcon.value && 
-                                        brickTypeDetailsForm.controls.sign.value.length > 2">
-                Укажите иконку или 2 символа
+                <div class="mat-error-custom" *ngIf="brickTypeDetailsForm.controls && 
+                                            brickTypeDetailsForm.controls.sign.value && 
+                                            !brickTypeDetailsForm.controls.isIcon.value && 
+                                            brickTypeDetailsForm.controls.sign.value.length > 2">
+                    Укажите иконку или 2 символа
+                </div>
+                <mat-error>
+                    Выберите иконку или введите не более 2 символов
+                </mat-error>
+            </mat-form-field>
+
+            <!-- Description -->
+            <mat-form-field>
+                <textarea matInput placeholder="{{'Step2.SkillDescriptionPlaceholder' | translate}}" formControlName="ruleDescription"></textarea>
+            </mat-form-field>
+
+
+
+            <!-- TYPE OF brickType -->
+            <mat-form-field>
+                <input matInput style="display: none" >
+                <mat-radio-group matInput formControlName="type" (change)="typeChanged()">
+                    <mat-radio-button [value]="1">Постоянная</mat-radio-button>
+                    <mat-radio-button [value]="2">С лимитом</mat-radio-button>
+                </mat-radio-group>
+            </mat-form-field>
+
+            <!-- DETAILS for BRICK TYPE with LIMIT -->
+            <div class="for-limit-container" *ngIf="brickTypeDetailsForm && brickTypeDetailsForm.value.type == 2">
+                <mat-form-field>
+                    <input type="number" matInput required placeholder="{{'Кол-во дней для создания привычки' | translate}}" formControlName="neededDays">
+                    <mat-error *ngIf="brickTypeDetailsForm.controls.neededDays.errors?.required">
+                        Обязательно для заполнения
+                    </mat-error>
+                    <mat-error *ngIf="brickTypeDetailsForm.controls.neededDays.errors?.min">
+                        Не может быть меньше 3
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field>
+                    <input  type="number" matInput required placeholder="{{'Кол-во допустимых пропущенных дней' | translate}}" formControlName="allowedSkipDays">
+                    <mat-error *ngIf="brickTypeDetailsForm.controls.allowedSkipDays.errors?.required">
+                        Обязательно для заполнения
+                    </mat-error>
+                    <mat-error *ngIf="brickTypeDetailsForm.controls.allowedSkipDays.errors?.min">
+                        Не может быть меньше 0
+                    </mat-error>
+                </mat-form-field>
             </div>
-            <mat-error>
-                Выберите иконку или введите не более 2 символов
-            </mat-error>
-        </mat-form-field>
 
-        <!-- Description -->
-        <mat-form-field>
-            <textarea matInput placeholder="{{'Step2.SkillDescriptionPlaceholder' | translate}}" formControlName="ruleDescription"></textarea>
-        </mat-form-field>
+            
 
-
-
-        <!-- TYPE OF brickType -->
-        <mat-form-field>
-            <input matInput style="display: none" >
-            <mat-radio-group matInput formControlName="type" (change)="typeChanged()">
-                <mat-radio-button [value]="1">Постоянная</mat-radio-button>
-                <mat-radio-button [value]="2">С лимитом</mat-radio-button>
-            </mat-radio-group>
-        </mat-form-field>
-
-        <!-- DETAILS for BRICK TYPE with LIMIT -->
-        <div class="for-limit-container" *ngIf="brickTypeDetailsForm && brickTypeDetailsForm.value.type == 2">
+            <!-- Is Private -->
             <mat-form-field>
-                <input type="number" matInput required placeholder="{{'Кол-во дней для создания привычки' | translate}}" formControlName="neededDays">
-                <mat-error *ngIf="brickTypeDetailsForm.controls.neededDays.errors?.required">
-                    Обязательно для заполнения
-                </mat-error>
-                <mat-error *ngIf="brickTypeDetailsForm.controls.neededDays.errors?.min">
-                    Не может быть меньше 3
-                </mat-error>
+                <input matInput style="display: none" >
+                <mat-checkbox matInput color="primary" formControlName="isPrivate">{{'Step2.IsPrivate' | translate}}</mat-checkbox>
             </mat-form-field>
 
-            <mat-form-field>
-                <input  type="number" matInput required placeholder="{{'Кол-во допустимых пропущенных дней' | translate}}" formControlName="allowedSkipDays">
-                <mat-error *ngIf="brickTypeDetailsForm.controls.allowedSkipDays.errors?.required">
-                    Обязательно для заполнения
-                </mat-error>
-                <mat-error *ngIf="brickTypeDetailsForm.controls.allowedSkipDays.errors?.min">
-                    Не может быть меньше 0
-                </mat-error>
-            </mat-form-field>
-        </div>
+            <div class="button-container">
+                <button mat-raised-button color="primary" 
+                    *ngIf="brickType && (brickType.status == 4 || brickType.status == 2)"  
+                    [disabled]='brickTypeDetailsForm.invalid ||
+                    (brickTypeDetailsForm.controls && 
+                    brickTypeDetailsForm.controls.sign.value && 
+                    !brickTypeDetailsForm.controls.isIcon.value && 
+                    brickTypeDetailsForm.controls.sign.value.length > 2)' 
+                    (click)="activateBrickType()">{{'Activate' | translate}}</button>
 
-        
+                <button mat-raised-button color="primary" 
+                                    *ngIf="!brickType || !brickType._id"  
+                                    [disabled]='brickTypeDetailsForm.invalid ||
+                                    (brickTypeDetailsForm.controls && 
+                                    brickTypeDetailsForm.controls.sign.value && 
+                                    !brickTypeDetailsForm.controls.isIcon.value && 
+                                    brickTypeDetailsForm.controls.sign.value.length > 2)' 
+                                    (click)="createBrickType()">{{'Add' | translate}}</button>
 
-        <!-- Is Private -->
-        <mat-form-field>
-            <input matInput style="display: none" >
-            <mat-checkbox matInput color="primary" formControlName="isPrivate">{{'Step2.IsPrivate' | translate}}</mat-checkbox>
-        </mat-form-field>
+                <button mat-raised-button color="primary" *ngIf="brickType && brickType._id && brickType.status != 4 && brickType.status != 2" [disabled]='brickTypeDetailsForm.invalid ||
+                                    (brickTypeDetailsForm.controls && 
+                                    brickTypeDetailsForm.controls.sign.value && 
+                                    !brickTypeDetailsForm.controls.isIcon.value && 
+                                    brickTypeDetailsForm.controls.sign.value.length > 2)' 
+                                    (click)="updateBrickType()">{{'Update' | translate}}</button>
 
-        <div class="button-container">
-            <button mat-raised-button color="primary" 
-                *ngIf="brickType && (brickType.status == 4 || brickType.status == 2)"  
-                [disabled]='brickTypeDetailsForm.invalid ||
-                (brickTypeDetailsForm.controls && 
-                brickTypeDetailsForm.controls.sign.value && 
-                !brickTypeDetailsForm.controls.isIcon.value && 
-                brickTypeDetailsForm.controls.sign.value.length > 2)' 
-                (click)="activateBrickType()">{{'Activate' | translate}}</button>
-
-            <button mat-raised-button color="primary" 
-                                *ngIf="!brickType || !brickType._id"  
-                                [disabled]='brickTypeDetailsForm.invalid ||
-                                (brickTypeDetailsForm.controls && 
-                                brickTypeDetailsForm.controls.sign.value && 
-                                !brickTypeDetailsForm.controls.isIcon.value && 
-                                brickTypeDetailsForm.controls.sign.value.length > 2)' 
-                                (click)="createBrickType()">{{'Add' | translate}}</button>
-
-            <button mat-raised-button color="primary" *ngIf="brickType && brickType._id && brickType.status != 4 && brickType.status != 2" [disabled]='brickTypeDetailsForm.invalid ||
-                                (brickTypeDetailsForm.controls && 
-                                brickTypeDetailsForm.controls.sign.value && 
-                                !brickTypeDetailsForm.controls.isIcon.value && 
-                                brickTypeDetailsForm.controls.sign.value.length > 2)' 
-                                (click)="updateBrickType()">{{'Update' | translate}}</button>
-
-            <button mat-raised-button color="warn" *ngIf="brickType && brickType._id && brickType.status != 4 && brickType.status != 2" 
-                    (click)="deleteBrickType()">{{'Delete' | translate}}</button>
-        </div>
-    </form>
-</mat-card>
+                <button mat-raised-button color="warn" *ngIf="brickType && brickType._id && brickType.status != 4 && brickType.status != 2" 
+                        (click)="deleteBrickType()">{{'Delete' | translate}}</button>
+            </div>
+        </form>
+    </mat-card>
+</div>
