--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,8 +41,8 @@ body {
     display: flex;
     justify-content: space-between;
     width: 180px;
+    color: red;
 }
-
 
 .warn-span{
     width: 60%;
@@ -217,7 +217,7 @@ h5 {
     font-weight: bold;
 }
 .title-header{
-     max-width: 960px;
+    max-width: 960px;
     min-width: 270px;
     margin: auto;
 }
