--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -1,5 +1,13 @@
+@import './../../content/variables';
+
 .side-bar-button{
     float: left;
+    position: absolute;
+    left: 0px;
+    top: 50vh;
+    z-index: 10;
+    background: $mainBackground;
+    border-radius: 0px 20px 20px 0px;
 }
 
 .calendar{
@@ -18,12 +26,12 @@
 // rgba(63, 63, 63, 0.712);
 .one-day { 
     box-sizing: border-box;
-    min-width: 51px;
+    //min-width: 51px;
     //width: 91px;
-    max-width: 131px;
+    //max-width: 131px;
     //flex-grow: 1;
     height: 120px;
-    margin: 3px;
+    margin: 0.3%;
     // background: rgb(139, 139, 139);
     // opacity: 0.3;
     background: rgba(63, 63, 63, 0.712);
@@ -35,6 +43,7 @@
     border: 1px solid rgb(70, 70, 70);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     flex-basis: 13.6%;
+    box-sizing: border-box;
 }
 .one-day:hover:not(.day-disabled){    
     background: #0097a7;    
@@ -141,15 +150,15 @@
 // ======================= MEDIA =====================
 @media screen and(max-width: 930px){
     .one-day { 
-        flex-basis: 13.4%;
+        //flex-basis: 13.2%;
     }
 }
 @media screen and(max-width: 730px){
     .one-day { 
-        flex-basis: 13.2%;
+        //flex-basis: 13.2%;
     }
 }
-@media screen and(max-width: 600px){
+@media screen and(max-width: 650px){
     .one-day { 
         flex-basis: 100%;
         max-width: 100%;
