Main menu fix for phone

--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -2,7 +2,7 @@
 
 .side-bar-button{
     float: left;
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 50vh;
     z-index: 10;
