--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -44,6 +44,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     flex-basis: 13.6%;
     box-sizing: border-box;
+    position: relative;
 }
 .one-day:hover:not(.day-disabled){    
     background: #0097a7;    
@@ -77,6 +78,10 @@
     margin: 3px;
     color: white;
     font-size: 16px;
+
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
 }
 // .brick-in-calendar {
 //     //z-index: 100;
@@ -163,11 +168,15 @@
         flex-basis: 100%;
         max-width: 100%;
         height: 35px;
+        display: table;
     }
     .week-nav{
         display: none;
     }
-    .day-number{
-        margin-top: -25px;
+    .bricks-container{
+        max-height: 200px;
     }
+    // .day-number{
+    //     margin-top: -25px;
+    // }
 }
