--- a/src/app/userSetting/frend/frend-list/frend-list.component.html
+++ b/src/app/userSetting/frend/frend-list/frend-list.component.html
@@ -73,7 +73,7 @@
         </tr>
     </table>
 
-    <p-table [value]="frendList">
+    <!-- <p-table [value]="frendList">
         <ng-template pTemplate="header">
             <tr>
                 <th>_id</th>
@@ -90,9 +90,9 @@
                 <td>{{frend.statusId}}</td>
             </tr>
         </ng-template>
-    </p-table>
+    </p-table> -->
 
-    <p-orderList [value]="cars">
+    <!-- <p-orderList [value]="cars">
         <ng-template let-car pTemplate="item">
             <div class="ui-helper-clearfix">
                 <img src="assets/showcase/images/demo/car/{{car.brand}}.png" style="display:inline-block;margin:2px 0 2px 2px" width="48">
@@ -105,7 +105,7 @@
         <p-header>
                 <p-button label="Click" icon="pi pi-check" iconPos="left"></p-button>
         </p-header>
-    </p-panel>
+    </p-panel> -->
 
 
 </mat-card>
