--- a/src/app/components/wall-side-nav/wall-side-nav.component.html
+++ b/src/app/components/wall-side-nav/wall-side-nav.component.html
@@ -1,22 +1,14 @@
-<div class="wall-side-nav" 
-    [ngClass]="{ 'side-bar-expanded': sideBarExpanded }">
-    <!-- [ngClass]="{ 'side-bar-expanded': sideBarExpanded }"> -->
+<div class="wall-side-nav" >
 
     <div class="side-bar-title" 
         (click)="toogleSideBar()">
 
-        <span *ngIf="!sideBarExpanded" class="arrow-spin"><mat-icon>keyboard_arrow_left</mat-icon></span> 
-        <!-- <span *ngIf="sideBarExpanded" class="arrow-spin"><mat-icon>keyboard_arrow_right</mat-icon></span>  -->
-    
-        <!-- <div *ngIf="sideBarExpanded" class="side-bar-title-text">
-            <div class="title-container">Стена {{nickName}}</div>
-        </div> -->
+        <span class="arrow-spin"><mat-icon>keyboard_arrow_left</mat-icon></span> 
         <div class="side-bar-title-text">
             <div class="title-container">Стена {{nickName}}</div>
         </div>
     </div>
 
-    <!-- <div *ngIf="sideBarExpanded"></div> -->
     <div>
         <div class="side-bar-body" >
             <!-- Сферы влияния -->
@@ -45,8 +37,9 @@
             </mat-expansion-panel>
 
             <!-- Привычки -->
-            <mat-expansion-panel (opened)="panelOpenState = true"
-                                (closed)="panelOpenState = false">
+            <!-- (opened)="panelOpenState = true"
+                                (closed)="panelOpenState = false" -->
+            <mat-expansion-panel >
                 <mat-expansion-panel-header>
                     <mat-panel-title>
                         Привычки
