--- a/src/app/components/wall-side-nav/wall-side-nav.component.html
+++ b/src/app/components/wall-side-nav/wall-side-nav.component.html
@@ -69,8 +69,9 @@
             </mat-expansion-panel>
 
             <!-- Друзья -->
-            <mat-expansion-panel (opened)="panelOpenState = true"
-                                (closed)="panelOpenState = false">
+            <!-- (opened)="panelOpenState = true"
+                                (closed)="panelOpenState = false" -->
+            <mat-expansion-panel >
                 <mat-expansion-panel-header>
                     <mat-panel-title>
                         Друзья
